# tasmotaManager

./: config.yaml  pyproject.toml  tasmotamanager.py
config/: config.py
models/: device.py
mqtt/: mqtt.py
tests/: test_mqtt.py
